--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Git & Github</title>
+	<title>Login</title>
 </head>
 <body>
-	this is Git
-	git form
+	login form
 </body>
 </html>
